day 6 part 1